--- a/views/layouts/knockout.jade
+++ b/views/layouts/knockout.jade
@@ -1,6 +1,7 @@
 doctype html
 html
   head
+    link(rel="stylesheet" href="/css/app.css")
     script(src="/js/hive.js")
   body
     block content  
