--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,1 +1,25 @@
 /* application styles */
+
+@import 'angular-material/angular-material.css';
+
+html,
+body {
+  min-height: 100%;
+}
+
+.channel {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.header {
+  height: 80px;
+}
+
+.panels {
+  width: 300px;
+  background-color: #eee;
+}
