--- a/views/index.jade
+++ b/views/index.jade
@@ -1,8 +1,8 @@
 extends layouts/knockout
 
 block content
-  h1 Hello, world.
+  div(ui-view)
   
 block scripts
-  script.
-    console.log('scripts loaded.  rock and roll.');
+  script(src='//cdn.plyr.io/1.3.6/plyr.js')
+  script(src='/js/hive.js')
