--- a/views/layouts/knockout.jade
+++ b/views/layouts/knockout.jade
@@ -1,8 +1,9 @@
 doctype html
 html
   head
+    //- base(href='/')
+    title Hive
     link(rel="stylesheet" href="/css/app.css")
-    script(src="/js/hive.js")
   body
     block content  
     block scripts
