--- a/views/index.jade
+++ b/views/index.jade
@@ -1,7 +1,65 @@
 extends layouts/knockout
 
 block content
-  div(ui-view)
+
+  md-toolbar(ng-show='!showSearch')
+    div.md-toolbar-tools
+      md-button.menuBtn(ng-click="toggleSidenav('left')", aria-label='Menu')
+        ng-md-icon(icon='menu')
+      h3
+        strong HIVE  
+      h6 .media
+      span(flex)
+      md-button(aria-label='Search', ng-click='showSearch = !showSearch')
+        ng-md-icon(icon='search')
+      md-button(aria-label='Open Settings', ng-click='showListBottomSheet($event)')
+        ng-md-icon(icon='more_vert')
+    //- md-tabs.md-primary(md-stretch-tabs='always', md-selected='data.selectedIndex')
+    //-   md-tab(id='tab1', aria-controls='tab1-content')
+    //-     md-tab-label
+    //-       span(ui-sref='/view1') Latest
+    //-   md-tab(id='tab2', aria-controls='tab2-content')
+    //-     md-tab-label
+    //-       span(ui-sref='/view2') Favorites
+  md-toolbar.md-hue-1(ng-show='showSearch')
+    div.md-toolbar-tools
+      md-button(ng-click='showSearch = !showSearch', aria-label='Back')
+        ng-md-icon(icon='arrow_back')
+      h3(flex='10') Back
+      md-input-container(md-theme='default', flex)
+        label &nbsp;
+        input(ng-model='search.who', placeholder='enter search')
+      md-button(aria-label='Search', ng-click='showSearch = !showSearch')
+        ng-md-icon(icon='search')
+      md-button(aria-label='Open Settings', ng-click='showListBottomSheet($event)')
+        ng-md-icon(icon='more_vert')
+  //- md-sidenav.md-sidenav-left.md-whiteframe-z3(layout='column', flex, md-component-id='left', md-is-locked-open="$mdMedia('')")
+  //-   md-toolbar.md-tall.md-hue-2
+  //-     span(flex)
+  //-     div.md-toolbar-tools-bottom(layout='column', inset)
+  //-       user-avatar
+  //-       span
+  //-       div Hello {{ name }}
+  //-       div {{ email }}
+  //-   md-list
+  //-     md-item(ng-repeat='item in menu')
+  //-       a
+  //-         md-item-content(md-ink-ripple, layout='row', layout-align='start center')
+  //-           div.inset
+  //-             ng-md-icon(icon='{{ item.icon }}')
+  //-           div.inset {{ item. title }}
+  //-     md-divider
+  //-     md-subheader Management
+  //-     md-item(ng-repeat='item in admin ')
+  //-       a
+  //-         md-item-content(md-ink-ripple, layout='row', layout-align='start center')
+  //-           div.inset
+  //-             ng-md-icon(icon='{{ item.icon }}')
+  //-           div.inset {{ item.title }}
+
+  md-content(flex, md-scroll-y)
+    ui-view(layout='column', layout-fill, layout-padding)
+      //div.inset(hide-sm ng-view)
   
 block scripts
   script(src='//cdn.plyr.io/1.3.6/plyr.js')
