--- a/views/index.jade
+++ b/views/index.jade
@@ -2,17 +2,17 @@ extends layouts/knockout
 
 block content
 
-  md-toolbar(ng-show='!showSearch')
+  md-toolbar(ng-controller='HomeController as home', ng-show='!showSearch')
     div.md-toolbar-tools
-      md-button.menuBtn(ng-click="toggleSidenav('left')", aria-label='Menu')
+      md-button.menuBtn(ng-click="home.toggleSidenav('left')", aria-label='Menu')
         ng-md-icon(icon='menu')
       h3
         strong HIVE  
       h6 .media
       span(flex)
-      md-button(aria-label='Search', ng-click='showSearch = !showSearch')
+      md-button(aria-label='Search', ng-click='home.showSearch = !showSearch')
         ng-md-icon(icon='search')
-      md-button(aria-label='Open Settings', ng-click='showListBottomSheet($event)')
+      md-button(aria-label='Open Settings', ng-click='home.showListBottomSheet($event)')
         ng-md-icon(icon='more_vert')
     md-tabs.md-primary(md-stretch-tabs='always', md-selected='data.selectedIndex')
       md-tab(id='tab1', aria-controls='tab1-content')
