--- a/src/css/app.css
+++ b/src/css/app.css
@@ -9,7 +9,7 @@ body {
 
 .channel {
   position: absolute;
-  top: 0;
+  top: 64px;
   bottom: 0;
   left: 0;
   right: 0;
@@ -19,9 +19,26 @@ body {
   height: 80px;
 }
 
-.panels {
-  width: 300px;
+.queue,
+.users {
   background-color: #eee;
+  width: 300px;
+}
+
+.videoWrapper {
+  position: relative;
+  padding-bottom: 56.25%;
+  /* padding-top: 25px; */
+  height: 0;
+}
+
+.videoWrapper iframe {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  border: 0;
 }
 
 .menu {
