--- a/views/templates/channels.jade
+++ b/views/templates/channels.jade
@@ -1,4 +1,14 @@
 h1 Channels
-ul
-  li(ng-repeat='channel in home.channels')
-    a(ng-href='#/c/{{channel.slug}}') {{channel.name}}
+.div(layout='row', layout-wrap, layout-sm='column', layout-md='column')
+  .div(ng-repeat='channel in home.channels', flex='33')
+    md-card.channel-card
+      a(href='#/c/{{channel.slug}}')
+        img.md-card-image(ng-src='{{ home.imagePath }}', alt='{{ channel.slug }}')
+      md-card-content
+        md-input-container(flex)
+          h3 {{channel.name}}
+          p {{ channel.description }}
+          md-button.md-primary(ng-click='#/c/{{channel.slug}}') Join
+          
+md-button.md-fab.md-fab-bottom-right(aria-label='Add', ng-click='home.showAdd($event)')
+  ng-md-icon(icon='add')
