Add voting button to header.

--- a/views/index.jade
+++ b/views/index.jade
@@ -9,6 +9,11 @@ block content
       h3
         strong HIVE  
       h6 .media
+      
+      span(flex)
+      
+      iframe(src="http://nodeknockout.com/iframe/srs", frameborder="0", scrolling="no", allowtransparency="true", width="115", height="25")
+      
       span(flex)
       md-button(aria-label='Search', ng-click='showSearch = !showSearch')
         ng-md-icon(icon='search')
