More content shenanigans.

--- a/views/templates/channels.jade
+++ b/views/templates/channels.jade
@@ -1,8 +1,14 @@
-h1.md-display-3 Swarm-hosted content.
-p.md-display-1 <strong>Hive</strong> is a peer-to-peer content-consumption platform.
-p This website is an <strong>edge node</strong>, a portal for users of the legacy World Wide Web to access the swarm.
 
-md-button Feed the Swarm
+div(layout="row", style="padding: 1em;")
+  div(flex="66")
+    h1.md-display-3 Swarm-hosted content.
+    p.md-display-1 <strong>Hive</strong> is a peer-to-peer content-consumption platform.
+    p This website is an <strong>edge node</strong>, a portal for users of the legacy World Wide Web to access the swarm.  We've focused primarily on video content for now, because that's fun.
+  div(flex="33")
+    img(src="/img/honeycomb-small.png")
+
+div(layout="row")
+  md-button(ng-click=) Feed the Swarm
 
 h2 Featured Channels
 
