--- a/views/index.jade
+++ b/views/index.jade
@@ -6,9 +6,12 @@ block content
     div.md-toolbar-tools
       md-button.menuBtn(ng-click="home.toggleSidenav('left')", aria-label='Menu')
         ng-md-icon(icon='menu')
-      h3
-        strong HIVE  
-      h6 .media
+
+      h1
+        a(href="/#/", title="Swarm-hosted media.")
+          img(src="/img/honeycomb-small.png", style="max-height: 1em; margin-right: 0.5em;")
+          strong HIVE
+          small .media
       
       span(flex)
       
@@ -20,10 +23,12 @@ block content
       md-button(aria-label='Open Settings', ng-click='home.showListBottomSheet($event)')
         ng-md-icon(icon='more_vert')
 
-
   ui-view(flex layout='column')
       //div.inset(hide-sm ng-view)
-  
+      
+  md-sidenav.md-sidenav-left(md-component-id="left")
+    h4 left nav!
+
 block scripts
   script(src='//cdn.plyr.io/1.3.6/plyr.js')
   script(src='/js/hive.js')
