--- a/views/templates/channels.jade
+++ b/views/templates/channels.jade
@@ -7,7 +7,7 @@ div(layout="row", style="padding: 1em;")
 
     p
       div(layout="row", layout-align="end end")
-        md-button.md-primary.md-raised(ng-click=) Feed the Swarm
+        md-button.md-primary.md-raised(href="/get-started") Feed the Swarm
 
   div(flex="33")
     img(src="/img/honeycomb-small.png")
