Get source from websocket

--- a/views/templates/channel.jade
+++ b/views/templates/channel.jade
@@ -2,7 +2,7 @@
   section(layout='row' flex)
     nav.queue queue
     article(flex)
-      plyr(track-id='channel.track.id')
+      plyr(track-id='channel.sourceId')
       .title {{channel.track.title}} {{channel.track}}
       div {{channel}}
     aside.users users
